@@ -979,6 +979,144 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|/**    * Handle trailing spaces that result in no prefix token LUCENE-6093    */
+DECL|method|testNullPrefixToken
+specifier|public
+name|void
+name|testNullPrefixToken
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|BytesRef
+name|payload
+init|=
+operator|new
+name|BytesRef
+argument_list|(
+literal|"lake"
+argument_list|)
+decl_stmt|;
+name|Input
+name|keys
+index|[]
+init|=
+operator|new
+name|Input
+index|[]
+block|{
+operator|new
+name|Input
+argument_list|(
+literal|"top of the lake"
+argument_list|,
+literal|8
+argument_list|,
+name|payload
+argument_list|)
+block|}
+decl_stmt|;
+name|Path
+name|tempDir
+init|=
+name|createTempDir
+argument_list|(
+literal|"BlendedInfixSuggesterTest"
+argument_list|)
+decl_stmt|;
+name|Analyzer
+name|a
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|(
+name|CharArraySet
+operator|.
+name|EMPTY_SET
+argument_list|)
+decl_stmt|;
+name|BlendedInfixSuggester
+name|suggester
+init|=
+operator|new
+name|BlendedInfixSuggester
+argument_list|(
+name|newFSDirectory
+argument_list|(
+name|tempDir
+argument_list|)
+argument_list|,
+name|a
+argument_list|,
+name|a
+argument_list|,
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_MIN_PREFIX_CHARS
+argument_list|,
+name|BlendedInfixSuggester
+operator|.
+name|BlenderType
+operator|.
+name|POSITION_LINEAR
+argument_list|,
+name|BlendedInfixSuggester
+operator|.
+name|DEFAULT_NUM_FACTOR
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|InputArrayIterator
+argument_list|(
+name|keys
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"of "
+argument_list|,
+name|payload
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"the "
+argument_list|,
+name|payload
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|getInResults
+argument_list|(
+name|suggester
+argument_list|,
+literal|"lake "
+argument_list|,
+name|payload
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|suggester
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|rying
 specifier|public
 name|void
